--- a/estilos.css
+++ b/estilos.css
@@ -47,7 +47,7 @@ header{
 .bannerindex{
     width: 100%;
     height: 500px;
-    background-image: url(../img/fondo2.jpg);
+    background-image: url(../fondo2.jpg);
     background-position: center;
     background-size: cover;
 }
